@@ -26,6 +26,10 @@ NEW FEATURES
     o makeNodeLabel() is now generic with methods for the "phylo" and
       "multiPhylo" classes.
 
+    o unroot() gains two options, 'collapse.singles' and
+      'keep.root.edge', to handle some complicated situations (see
+      issue #103 on GitHub).
+
 
 BUG FIXES
 
